--- a/creators.html
+++ b/creators.html
@@ -187,7 +187,7 @@
                 <img src="img/creators.png" alt="Creadores Icono">
                 Creadores
             </a>
-            <a href="profile.html" class="menu-item">
+            <a href="https://yosoyalexxd1.wixsite.com/momentosxddegumball" class="menu-item">
                 <img src="img/profile.png" alt="Perfil Icono">
                 Perfil
             </a>
