--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <img src="img/creators.png" alt="Creadores Icono">
                 Creadores
             </a>
-            <a href="https://yosoyalexxd1.wixsite.com/momentosxddegumball" class="menu-item">
+            <a href="img/profile.jpg" class="menu-item">
                 <img src="img/profile.png" alt="Perfil Icono">
                 Perfil
             </a>
